# ripio-client-python

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sample.py
ripio/: __init__.py  core.py
ripio/exceptions/: auth.py  request.py  response.py
ripio/trade/: client.py
